Fix alignment of desktop sidebar icons

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -132,7 +132,7 @@ footer {
     }
 
     i {
-        padding-right: 10px;
+        padding-right: 5px;
     }
 
     .desktop-only-navbar .btn-nav:nth-child(1) {
